# Equity-Pulse

./: .gitignore  PARAMETERS.md  README.md  SETUP.md  prd_content.txt  start.sh
backend/: .env.example  AGENT.md  Dockerfile  alembic.ini  debug_agent.py  debug_log_tail.txt  debug_roce.py  debug_roce_ebitda.py  docker-compose.langfuse.yml  docker-compose.yml  equitypulse.db  inspect_langfuse.py  list_models.py  logging.conf  pyproject.toml  reproduce_financials.py  start_langfuse.sh  test_ddg.py  verify_db.py  verify_fixes.py  verify_new_tools.py  verify_quality.py  verify_report_persistence.py  verify_risk_tool.py
backend/alembic/: env.py
backend/alembic/versions/: 168e71d0ba28_add_image_urls_to_chat_history.py  79f2c1963c5c_initial_migration.py  7ae875e525aa_rename_session_id_to_id_add_user_.py  add_logs_column.py  cdd8036b7b50_create_chat_history_v2.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/endpoints/: analysis.py  chat.py  tickers.py
backend/app/core/: config.py  database.py  log_stream.py
backend/app/data/: tickers.json
backend/app/graph/: agent_factory.py  chat_graph.py  graph.py  logger.py  state.py  tools.py
backend/app/graph/nodes/: aggregator.py  fundamental.py  management.py  orchestrator.py  quant.py  risk_management.py  sector.py  technical.py
backend/app/models/: chat.py  report.py
backend/app/repositories/: chat.py
backend/app/services/: analysis_runner.py  chat.py
backend/app/utils/: fetch_tickers.py
backend/docs/: CHAT_IMPLEMENTATION_PLAN.MD
backend/tests/: test_financial_metrics.py
(+28 files in other folders)
