[project]
name = "equitypulse-backend"
version = "0.1.0"
description = "AI-powered equity analysis platform backend"
requires-python = ">=3.11"
authors = [
    { name = "Admin", email = "admin@equitypulse.com" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.10",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "yfinance>=0.2.50",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "duckduckgo-search>=4.1.1",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "psycopg2-binary>=2.9.9",
    "pandas>=3.0.0",
    "lxml>=6.0.2",
    "html5lib>=1.1",
    "langchain-google-genai>=4.2.0",
    "google-generativeai>=0.8.6",
    "ddgs>=9.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "black>=24.1.1",
    "isort>=5.13.2"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
